Change log for Test::Pod

1.42
    * Fixed invalid Pod link. Thanks to Markus Sonderegger.

1.41 - 2010-01-14T20:09:25
    * Maintenance transfered to David Wheeler.
    * Test::Pod no longer complains about the construct L<text|url>, as it is
      no longer illegal (as of Perl 5.11.3).
    * Switched to Module::Build.

1.40 - Sun Jul 12 23:32:11 CDT 2009
    [THINGS THAT MAY BREAK YOUR CODE]
    Test::Pod now requires Perl 5.8.0.

    [ENHANCEMENTS]
    Test::Pod now complains about the illegal construct L<text|url>.
    Thanks to Paul Miller.

    The list of directories to exclude is now much longer, and is
    available in %Test::Pod::ignore_dirs.  This list is right now:

        '.bzr' => 'Bazaar',
        '.git' => 'Git',
        '.hg'  => 'Mercurial',
        '.pc'  => 'quilt',
        '.svn' => 'Subversion',
        CVS    => 'CVS',
        RCS    => 'RCS',
        SCCS   => 'SCCS',
        _darcs => 'darcs',
        _sgbak => 'Vault/Fortress',


1.26 - Wed Jul 19 09:54:48 CDT 2006

    No new functionality in this version.

    [FIXES]
    * Fixed a Win32 build bug.
    * Fixed a bug in the SYNOPSIS.

1.24 - Wed Feb  1 15:18:06 PST 2006
    [THINGS THAT MAY BREAK YOUR CODE]
    * The long-deprecated pod_ok() is now gone, along with all its
      constants.

    [ENHANCEMENTS]
    * Now runs properly under VMS.  Thanks to Peter Edwards.

1.22 - Sun Oct 23 23:45:51 CDT 2005
    [ENHANCEMENTS]
    * Added check for lines with only whitespace before or after a
      directive.  Older POD formatters can get confused by such
      lines since they goof up paragraph mode. (RT #6467)

    [FIXES]
    * Bumped up requirements to Test::Simple 0.62.

1.20 - Wed Jun 23 00:28:35 CDT 2004
    [ENHANCEMENTS]
    * Looks in blib/ if there is one, otherwise looks in lib/
    * Thanks to David Wheeler for nudging.

1.18 - Fri May 28 23:48:28 CDT 2004
    [FIXES]
    * Now exports all_pod_files() as advertised.
    * Also includes *.t files as Pod.
