@@ -2,6 +2,8 @@ Change log for Test::Pod
 
 1.42
     * Fixed invalid Pod link. Thanks to Markus Sonderegger.
+    * Changed license in the POD to "Same as Perl" to match the license listed in
+      `META.yml`.
 
 1.41 - 2010-01-14T20:09:25
     * Maintenance transfered to David Wheeler.
